<resources>
    <string name="app_name">YouGattMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_header_subtitle">Cycling Power Gatt Service</string>
    <string name="nav_header_title">YouGattMe</string>


    <string name="menu_imprint">Imprint</string>
    <string name="menu_toc">Terms and Conditions</string>
    <string name="menu_gdpr">Privacy</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watts">Watts</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="watts_settings_header">GATT Server</string>
    <string name="publish_interval_title">Publish Interval (ms)</string>
    <string name="gatt_server_deactivated">GATT offline</string>
    <string name="no_data">...</string>
    <string name="no_bluetooth_support">Bluetooth not supported</string>
    <string name="bluetooth_will_be_enabled">Activating Bluetooth...</string>
    <string name="starting_services">Bluetooth enabled, starting services...</string>
    <string name="stopping_services">Stopping services...</string>
    <string name="ok">OK</string>
    <string name="summary_publish_interval_preference">Value is used after restart of Gatt Server</string>
    <string name="menu_rower_data">Rower Data</string>
    <string name="cycling_power_activated">Cycling Power</string>
    <string name="cycling_power_summary_off">Cylcing power will not be broadcasted</string>
    <string name="cycling_power_summary_on">Cycling power is broadcasted</string>
    <string name="fitness_machine_activated">"Fitness machine "</string>
    <string name="fitness_machine_summary_off">Fitness machine will not be broacasted</string>
    <string name="fitness_machine_summary_on">Fitness machine is broadcasted</string>
    <string name="select_fitness_machine_mode">Fitness Machine Selector</string>
    <string name="label_rower_watts">Watts</string>
    <string name="label_strokes_per_minute">Strokes per minute</string>
    <string name="summary_cycling_power_instant_power_preference">The instant power to be broadcast within the Characteristic \"cycling_power_measurement\"</string>
    <string name="cycling_power_instant_power_title">Cycling Power Measurement</string>
    <string name="menu_fitness_machine">Fitness Machine</string>
    <string name="activate_fitness_machine">Activate Fitness Machine</string>
    <string name="fitness_machine_has_been_started_by_client">Fitness Machine has been started by client</string>
    <string name="activate_running_speed_and_cadence">Activate RSC Profile</string>
    <string name="menu_running_speed_and_cadence">RSC</string>
    <string name="activate_cycling_power">Activate Cycling Power</string>
    <string name="activate_cycling_speed_and_cadence">Activate CSC</string>
    <string name="label_rower_seconds_per_500m">Seconds per 500m</string>
    <string name="ftms_rower_power_present">Instant Power Present</string>
    <string name="ftms_rower_pace_present">Instant Pace Present</string>

</resources>